--- a/src/Components/News/NewsComponent.style.scss
+++ b/src/Components/News/NewsComponent.style.scss
@@ -24,6 +24,9 @@
   text-overflow: ellipsis;
   max-width: 100ch;
 }
+.news__date {
+  max-width: 100px;
+}
 .news__image {
   width: 100px;
   height: 100px;
